--- a/Sources/HodEngine/ImGui/CMakeLists.txt
+++ b/Sources/HodEngine/ImGui/CMakeLists.txt
@@ -9,21 +9,73 @@ else()
 project(ImGui LANGUAGES CXX)
 endif()
 
+find_package(Python3 REQUIRED COMPONENTS Interpreter)
+
 CollectSourceFiles(${PROJECT_SOURCE_DIR} Srcs Includes)
 
-file(GLOB_RECURSE ShaderSources
-	"${PROJECT_SOURCE_DIR}/Shader/*"
-)
+function(CompileReflectEmbedShader INPUT_SLANG TARGET_API SHADER_TYPE SHADER_CONFIG TEMPLATE_CPP TEMPLATE_HPP OUTPUT_CPP OUTPUT_HPP TEMP_DIR)
+
+  message("${CMAKE_SOURCE_DIR}/CMake/CompileReflectEmbedShader.py ${SLANG_COMPILER}  ${INPUT_SLANG} ${TARGET_API} ${SHADER_TYPE} ${SHADER_CONFIG} ${TEMPLATE_CPP} ${TEMPLATE_HPP} ${OUTPUT_CPP} ${OUTPUT_HPP} ${TEMP_DIR}")
+
+	add_custom_command(
+		OUTPUT ${OUTPUT_CPP} ${OUTPUT_HPP}
+		COMMAND ${Python3_EXECUTABLE}
+			${CMAKE_SOURCE_DIR}/CMake/CompileReflectEmbedShader.py
+			${SLANG_COMPILER}
+			${INPUT_SLANG}
+			${TARGET_API}
+			${SHADER_TYPE}
+			${SHADER_CONFIG}
+			${TEMPLATE_CPP}
+			${TEMPLATE_HPP}
+			${OUTPUT_CPP}
+			${OUTPUT_HPP}
+			${TEMP_DIR}
+		DEPENDS
+			${INPUT_SLANG}
+			${CMAKE_SOURCE_DIR}/CMake/CompileReflectEmbedShader.py
+			${TEMPLATE_CPP}
+			${TEMPLATE_HPP}
+		COMMENT "Compiling ${SHADER_TYPE} shader from ${INPUT_SLANG}"
+	)
+endfunction()
+
+set(ShaderCpps "")
+set(ShaderHpps "")
+
+file(GLOB_RECURSE ShaderSources "${PROJECT_SOURCE_DIR}/Shader/*")
+
+if(NOT APPLE)
+	set(SHADER_TARGET_API Vulkan)
+else()
+	set(SHADER_TARGET_API Metal)
+endif()
+set(SHADER_TMP_DIR ${PROJECT_BINARY_DIR}/ShaderTmp)
+set(SHADER_CPP_TEMPLATE ${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/BinarySourceFileTemplate.cpp.in)
+set(SHADER_HPP_TEMPLATE ${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/BinarySourceFileTemplate.hpp.in)
+
+set(SHADER_CONFIG Debug)
 
 foreach(file ${ShaderSources})
-  EmbedTextInSource(${file}
-  ${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/TextSourceFileTemplate.hpp.in
-  ${PROJECT_BINARY_DIR}/Shader
-  GeneratedFileH
-  )
-  list(APPEND Srcs ${GeneratedFileH})
-  list(APPEND Includes ${GeneratedFileH})
+	get_filename_component(BASENAME "${file}" NAME_WE)
+
+	set(SHADER_TYPE "Vertex")
+	set(SHADER_EMBED_CPP ${PROJECT_BINARY_DIR}/Shader/${BASENAME}_${SHADER_TYPE}.cpp)
+	set(SHADER_EMBED_HPP ${PROJECT_BINARY_DIR}/Shader/${BASENAME}_${SHADER_TYPE}.hpp)
+	CompileReflectEmbedShader(${file} ${SHADER_TARGET_API} ${SHADER_TYPE} ${SHADER_CONFIG} ${SHADER_CPP_TEMPLATE} ${SHADER_HPP_TEMPLATE} ${SHADER_EMBED_CPP} ${SHADER_EMBED_HPP} ${SHADER_TMP_DIR})
+	list(APPEND ShaderCpps ${SHADER_EMBED_CPP})
+	list(APPEND ShaderHpps ${SHADER_EMBED_HPP})
+
+	set(SHADER_TYPE "Fragment")
+	set(SHADER_EMBED_CPP ${PROJECT_BINARY_DIR}/Shader/${BASENAME}_${SHADER_TYPE}.cpp)
+	set(SHADER_EMBED_HPP ${PROJECT_BINARY_DIR}/Shader/${BASENAME}_${SHADER_TYPE}.hpp)
+	CompileReflectEmbedShader(${file} ${SHADER_TARGET_API} ${SHADER_TYPE} ${SHADER_CONFIG} ${SHADER_CPP_TEMPLATE} ${SHADER_HPP_TEMPLATE} ${SHADER_EMBED_CPP} ${SHADER_EMBED_HPP} ${SHADER_TMP_DIR})
+	list(APPEND ShaderCpps ${SHADER_EMBED_CPP})
+	list(APPEND ShaderHpps ${SHADER_EMBED_HPP})
 endforeach()
+
+list(APPEND Srcs ${ShaderCpps})
+list(APPEND Includes ${ShaderHpps})
 
 EmbedBinaryInSource("Font/MaterialDesignIcons.ttf"
 	${PROJECT_SOURCE_DIR}/EmbedInSourceTemplate/BinarySourceFileTemplate.hpp.in
