--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,12 @@ if(WIN32)
     else()
         message(FATAL_ERROR "Unsupported Windows architecture: ${CMAKE_SYSTEM_PROCESSOR}")
     endif()
+elseif(APPLE)
+    if(CMAKE_SYSTEM_PROCESSOR STREQUAL "arm64")
+        set(ARCH_FOLDER "MacOs_${CMAKE_GENERATOR_PLATFORM}")
+    else()
+        message(FATAL_ERROR "Unsupported Apple architecture: ${CMAKE_SYSTEM_PROCESSOR}")
+    endif()
 else()
     message(FATAL_ERROR "Unsupported system: ${CMAKE_SYSTEM_NAME}")
 endif()
