--- a/Sources/HodEngine/Editor/CMakeLists.txt
+++ b/Sources/HodEngine/Editor/CMakeLists.txt
@@ -64,3 +64,27 @@ target_link_libraries(Editor
 	Renderer
   Game
 )
+
+add_custom_command(
+  TARGET Editor POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    ${SLANG_COMPILER}
+    $<TARGET_FILE_DIR:Editor>/Tools/slangc.exe
+  COMMENT "Copying SLANG_COMPILER to output directory"
+)
+
+add_custom_command(
+  TARGET Editor POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    ${SLANG_DLL}
+    $<TARGET_FILE_DIR:Editor>/Tools/slang.dll
+  COMMENT "Copying SLANG_COMPILER dll to output directory"
+)
+
+add_custom_command(
+  TARGET Editor POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    ${SLANG_DLL_GLSLANG}
+    $<TARGET_FILE_DIR:Editor>/Tools/slang-glslang.dll
+  COMMENT "Copying SLANG_COMPILER dll to output directory"
+)
