--- a/Sources/HodEngine/ImGui/CMakeLists.txt
+++ b/Sources/HodEngine/ImGui/CMakeLists.txt
@@ -40,7 +40,7 @@ endfunction()
 set(ShaderCpps "")
 set(ShaderHpps "")
 
-file(GLOB_RECURSE ShaderSources "${PROJECT_SOURCE_DIR}/Shader/*")
+file(GLOB_RECURSE ShaderSources "${PROJECT_SOURCE_DIR}/Shader/*.slang")
 
 if(NOT APPLE)
 	set(SHADER_TARGET_API Vulkan)
@@ -114,7 +114,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
   ${Core_INCLUDES}
   ${Window_INCLUDES}
   ${Renderer_INCLUDES}
-  Freetype::Freetype
 )
 
 include_directories(SYSTEM
