--- a/Sources/HodEngine/ImGui/CMakeLists.txt
+++ b/Sources/HodEngine/ImGui/CMakeLists.txt
@@ -43,7 +43,11 @@ set(ShaderHpps "")
 file(GLOB_RECURSE ShaderSources "${PROJECT_SOURCE_DIR}/Shader/*.slang")
 
 if(NOT APPLE)
-	set(SHADER_TARGET_API Vulkan)
+	if (WIN32)
+		set(SHADER_TARGET_API d3d12)
+	else()
+		set(SHADER_TARGET_API Vulkan)
+	endif()
 else()
 	set(SHADER_TARGET_API Metal)
 endif()
