Fix Slang post build copy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,15 @@ SetupLanguageVersion()
 if(WIN32)
   set(LIB_PREFIX "")
   set(LIB_EXTENSION "lib")
+  set(DLL_EXTENSION "dll")
+elseif(APPLE)
+  set(LIB_PREFIX "lib")
+  set(LIB_EXTENSION "a")
+  set(DLL_EXTENSION "dylib")
 else()
   set(LIB_PREFIX "lib")
   set(LIB_EXTENSION "a")
+  set(DLL_EXTENSION "so")
 endif()
 
 if(WIN32)
@@ -88,12 +94,12 @@ set_target_properties(PortableFileDialogs::PortableFileDialogs PROPERTIES
 
 if(WIN32)
 set(SLANG_COMPILER "${THIRDPARTY_ROOT}/bin/slangc.exe")
-set(SLANG_DLL "${THIRDPARTY_ROOT}/bin/slang.dll")
-set(SLANG_DLL_GLSLANG "${THIRDPARTY_ROOT}/bin/slang-glslang.dll")
+set(SLANG_DLL "${THIRDPARTY_ROOT}/bin/${LIB_PREFIX}slang.${DLL_EXTENSION}")
+set(SLANG_DLL_GLSLANG "${THIRDPARTY_ROOT}/bin/${LIB_PREFIX}slang-glslang.${DLL_EXTENSION}")
 else()
 set(SLANG_COMPILER "${THIRDPARTY_ROOT}/bin/slangc")
-set(SLANG_DLL "${THIRDPARTY_ROOT}/bin/slang.so")
-set(SLANG_DLL_GLSLANG "${THIRDPARTY_ROOT}/bin/slang-glslang.so")
+set(SLANG_DLL "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}slang.${DLL_EXTENSION}")
+set(SLANG_DLL_GLSLANG "${THIRDPARTY_ROOT}/lib/${LIB_PREFIX}slang-glslang.${DLL_EXTENSION}")
 endif()
 
 SetupPlatform()
