Cmake RENDERER define

--- a/Sources/HodApplication/CMakeLists.txt
+++ b/Sources/HodApplication/CMakeLists.txt
@@ -43,4 +43,4 @@ target_link_libraries(HodApplication
 	Application
 )
 
-target_compile_definitions(HodApplication PUBLIC ${PLATFORM_DEFINE} ${RENDERER_DEFINE})
+target_compile_definitions(HodApplication PUBLIC ${PLATFORM_DEFINE})
