--- a/Sources/HodEngine/Game/CMakeLists.txt
+++ b/Sources/HodEngine/Game/CMakeLists.txt
@@ -17,7 +17,7 @@ add_library(Game ${LIB_TYPE} ${Srcs} ${Includes})
 target_precompile_headers(Game PRIVATE "Pch.hpp")
 set_property(TARGET Game PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-target_compile_definitions(Game PUBLIC ${PLATFORM_DEFINE} ${RENDERER_DEFINE})
+target_compile_definitions(Game PUBLIC ${PLATFORM_DEFINE})
 target_compile_definitions(Game PRIVATE HOD_GAME_EXPORT)
 
 add_dependencies(Game Core Window Physics Renderer)
