--- a/Sources/HodEngine/Renderer/CMakeLists.txt
+++ b/Sources/HodEngine/Renderer/CMakeLists.txt
@@ -3,15 +3,20 @@ cmake_minimum_required(VERSION 3.10)
 include(Global)
 include(EmbedInSource)
 
-if(NOT APPLE)
+if(APPLE)
+	project(Renderer LANGUAGES CXX OBJCXX)
+else()
 	project(Renderer LANGUAGES CXX)
+endif()
+
+if(NOT APPLE)
 	if(WIN32)
-		set(API D3D12)
+		#set(API D3D12)
+		set(API Vulkan)
 	else()
 		set(API Vulkan)
 	endif()
 else()
-	project(Renderer LANGUAGES CXX OBJCXX)
 	set(API Metal)
 endif()
 
@@ -19,6 +24,7 @@ set(ExcludeDirs D3d12 Metal Vulkan)
 if(API STREQUAL Vulkan)
 	list(REMOVE_ITEM ExcludeDirs Vulkan)
 	set(SHADER_TARGET_API Vulkan)
+	set(RENDERER_DEFINE "RENDERER_VULKAN")
 	if (NOT ANDROID)
 		find_package(Vulkan REQUIRED)
 	else()
@@ -26,15 +32,17 @@ if(API STREQUAL Vulkan)
 		find_library(zlib-lib z)
 		set(Vulkan_INCLUDE_DIRS ${ANDROID_NDK}/toolchains/llvm/prebuilt/windows-x86_64/sysroot/usr/include) # TODO
 		set(Vulkan_LIBRARIES ${vulkan-lib} ${zlib-lib}) # TODO
+		find_package(BZip2 REQUIRED)
+		find_package(ZLIB REQUIRED)
 	endif()
-	find_package(BZip2 REQUIRED)
-	find_package(ZLIB REQUIRED)
 elseif(API STREQUAL Metal)
 	list(REMOVE_ITEM ExcludeDirs Metal)
 	set(SHADER_TARGET_API Metal)
+	set(RENDERER_DEFINE "RENDERER_METAL" PARENT_SCOPE)
 elseif(API STREQUAL D3D12)
 	list(REMOVE_ITEM ExcludeDirs D3d12)
 	set(SHADER_TARGET_API D3D12)
+	set(RENDERER_DEFINE "RENDERER_D3D12")
 	set(API_LIBRARIES d3d12.lib DXGI.lib)
 endif()
 
@@ -103,10 +111,10 @@ set_source_files_properties(RHI/Metal/MetalCpp.cpp PROPERTIES SKIP_UNITY_BUILD_I
 assign_source_group(${Srcs})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
-    "../.."
-    "${PROJECT_BINARY_DIR}/../.."
-    ${PROJECT_BINARY_DIR}
-    "RHI/Metal/MetalCpp"
+	"../.."
+	"${PROJECT_BINARY_DIR}/../.."
+	${PROJECT_BINARY_DIR}
+	"RHI/Metal/MetalCpp"
 )
 
 add_library(Renderer ${LIB_TYPE} ${Srcs} ${Includes})
@@ -116,30 +124,29 @@ set_property(TARGET Renderer PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 add_dependencies(Renderer Core Window)
 
 target_link_libraries(Renderer
-    Core
-    Window
-    Freetype::Freetype
+	Core
+	Window
+	Freetype::Freetype
 	Stb::Stb
 	VulkanMemoryAllocator::VulkanMemoryAllocator
 )
 
-
 if(NOT APPLE)
-  include_directories(${Vulkan_INCLUDE_DIRS} SpirvCross::SpirvCross)
-  target_link_libraries(Renderer ${Vulkan_LIBRARIES} ${API_LIBRARIES} SpirvCross::SpirvCross)
-  
-  unset(RENDERER_ENABLE_VALIDATION_LAYER CACHE)
-  option(RENDERER_ENABLE_VALIDATION_LAYER "Enable ValidationLayer" OFF)
-  set(RENDERER_ENABLE_VALIDATION_LAYER True)
-  
-  if (RENDERER_ENABLE_VALIDATION_LAYER)
-    target_compile_definitions(Renderer PUBLIC RENDERER_ENABLE_VALIDATION_LAYER)
-  endif ()
+	include_directories(${Vulkan_INCLUDE_DIRS} SpirvCross::SpirvCross)
+	target_link_libraries(Renderer ${Vulkan_LIBRARIES} ${API_LIBRARIES} SpirvCross::SpirvCross)
+
+	unset(RENDERER_ENABLE_VALIDATION_LAYER CACHE)
+	option(RENDERER_ENABLE_VALIDATION_LAYER "Enable ValidationLayer" OFF)
+	set(RENDERER_ENABLE_VALIDATION_LAYER True)
+
+	if (RENDERER_ENABLE_VALIDATION_LAYER)
+		target_compile_definitions(Renderer PRIVATE RENDERER_ENABLE_VALIDATION_LAYER)
+	endif ()
 else()
-  find_library(QUARTZCORE_LIBRARY QuartzCore)
-  find_library(METAL_LIBRARY Metal)
-  target_link_libraries(Renderer ${QUARTZCORE_LIBRARY} ${METAL_LIBRARY} ${BZIP2_LIBRARIES} ${ZLIB_LIBRARIES})
+	find_library(QUARTZCORE_LIBRARY QuartzCore)
+	find_library(METAL_LIBRARY Metal)
+	target_link_libraries(Renderer ${QUARTZCORE_LIBRARY} ${METAL_LIBRARY} ${BZIP2_LIBRARIES} ${ZLIB_LIBRARIES})
 endif()
 
-target_compile_definitions(Renderer PUBLIC ${PLATFORM_DEFINE} ${RENDERER_DEFINE})
+target_compile_definitions(Renderer PRIVATE ${PLATFORM_DEFINE} ${RENDERER_DEFINE})
 target_compile_definitions(Renderer PRIVATE HOD_RENDERER_EXPORT)
