--- a/Sources/HodEngine/ImGui/CMakeLists.txt
+++ b/Sources/HodEngine/ImGui/CMakeLists.txt
@@ -44,7 +44,8 @@ file(GLOB_RECURSE ShaderSources "${PROJECT_SOURCE_DIR}/Shader/*.slang")
 
 if(NOT APPLE)
 	if (WIN32)
-		set(SHADER_TARGET_API d3d12)
+		#set(SHADER_TARGET_API d3d12)
+		set(SHADER_TARGET_API Vulkan)
 	else()
 		set(SHADER_TARGET_API Vulkan)
 	endif()
