--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,7 @@ add_subdirectory("Sources/HodApplication")
 
 if (NOT ANDROID)
   add_subdirectory("Sources/HodEngine/CoreEditor")
+  add_subdirectory("Sources/HodEngine/InputEditor")
   add_subdirectory("Sources/HodEngine/GameEditor")
   add_subdirectory("Sources/HodEngine/UIEditor")
   add_subdirectory("Sources/HodEngine/Editor")
