--- a/Sources/HodEngine/Core/CMakeLists.txt
+++ b/Sources/HodEngine/Core/CMakeLists.txt
@@ -24,27 +24,20 @@ add_library(Core ${LIB_TYPE} ${Srcs} ${Includes})
 target_precompile_headers(Core PRIVATE "Pch.hpp")
 set_property(TARGET Core PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
-if(APPLE)
-	find_library(COREFOUNDATION_LIBRARY CoreFoundation)
-endif()
-
 if (APPLE)
-    find_library(COCOA_LIBRARY Cocoa)
+	find_library(COREFOUNDATION_LIBRARY CoreFoundation)
+	find_library(COCOA_LIBRARY Cocoa)
+	set(PLATFORM_LIBS ${COREFOUNDATION_LIBRARY} ${COCOA_LIBRARY})
+elseif(ANDROID)
+	find_library(ANDROID_LIBRARY android)
+	set(PLATFORM_LIBS ${ANDROID_LIBRARY} log)
+elseif(WIN32)
+	set(PLATFORM_LIBS "Dbghelp.lib")
+else()
+	set(PLATFORM_LIBS uuid)
 endif()
 
-if(ANDROID)
-find_library(android-lib android)
-target_link_libraries(Core ${android-lib} log)
-endif()
+target_link_libraries(Core PRIVATE ${PLATFORM_LIBS})
 
-if(WIN32)
-	set(DebugLib "Dbghelp.lib")
-endif()
-
-if(PLATFORM_LINUX)
-	target_link_libraries(Core uuid)
-endif()
-
-target_link_libraries(Core ${COREFOUNDATION_LIBRARY} ${COCOA_LIBRARY} ${DebugLib})
 target_compile_definitions(Core PUBLIC ${PLATFORM_DEFINE})
 target_compile_definitions(Core PRIVATE HOD_CORE_EXPORT)
