--- a/Sources/HodEngine/Physics/CMakeLists.txt
+++ b/Sources/HodEngine/Physics/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 add_library(Physics ${LIB_TYPE} ${Srcs} ${Includes})
+set_target_properties(Physics PROPERTIES FOLDER "HodEngine")
 target_precompile_headers(Physics PRIVATE "Pch.hpp")
 set_property(TARGET Physics PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
 
