--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,21 +32,21 @@ else()
 endif()
 
 if(WIN32)
-    if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64")
-        set(ARCH_FOLDER "Win_${CMAKE_GENERATOR_PLATFORM}")
-    elseif(CMAKE_SYSTEM_PROCESSOR STREQUAL "ARM64")
-        set(ARCH_FOLDER "Win_${CMAKE_GENERATOR_PLATFORM}")
+    if(ARCH STREQUAL "x64")
+        set(ARCH_FOLDER "Win_${ARCH}")
+    elseif(ARCH STREQUAL "ARM64")
+        set(ARCH_FOLDER "Win_${ARCH}")
     else()
-        message(FATAL_ERROR "Unsupported Windows architecture: ${CMAKE_SYSTEM_PROCESSOR}")
+        message(FATAL_ERROR "Unsupported Windows architecture: ${ARCH}")
     endif()
 elseif(APPLE)
-    if(CMAKE_SYSTEM_PROCESSOR STREQUAL "arm64")
+    if(ARCH STREQUAL "arm64")
         set(ARCH_FOLDER "MacOs_arm64")
     else()
-        message(FATAL_ERROR "Unsupported Apple architecture: ${CMAKE_SYSTEM_PROCESSOR}")
+        message(FATAL_ERROR "Unsupported Apple architecture: ${ARCH}")
     endif()
 else()
-    message(FATAL_ERROR "Unsupported system: ${CMAKE_SYSTEM_NAME}")
+    message(FATAL_ERROR "Unsupported system: ${ARCH}")
 endif()
 
 set(THIRDPARTY_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/Install/${ARCH_FOLDER}")
