Fix MacOs compilation (WIP)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,14 +34,14 @@ endif()
 if(WIN32)
     if(ARCH STREQUAL "x64")
         set(ARCH_FOLDER "Win_${ARCH}")
-    elseif(ARCH STREQUAL "ARM64")
+    elseif(ARCH STREQUAL "arm64")
         set(ARCH_FOLDER "Win_${ARCH}")
     else()
         message(FATAL_ERROR "Unsupported Windows architecture: ${ARCH}")
     endif()
 elseif(APPLE)
     if(ARCH STREQUAL "arm64")
-        set(ARCH_FOLDER "MacOs_arm64")
+        set(ARCH_FOLDER "MacOs_${ARCH}")
     else()
         message(FATAL_ERROR "Unsupported Apple architecture: ${ARCH}")
     endif()
