--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,12 @@ elseif(APPLE)
     else()
         message(FATAL_ERROR "Unsupported Apple architecture: ${ARCH}")
     endif()
+elseif(UNIX)
+    if(ARCH STREQUAL "x64")
+        set(ARCH_FOLDER "Linux_${ARCH}")
+    else()
+        message(FATAL_ERROR "Unsupported Linux architecture: ${ARCH}")
+    endif()
 else()
     message(FATAL_ERROR "Unsupported system: ${ARCH}")
 endif()
