Renderer: Add Slang reflection in EmbedShader (preapre SpirvCross removal and DX PSO creation)

--- a/Sources/HodEngine/Renderer/EmbedInSourceTemplate/BinarySourceFileTemplate.hpp.in
+++ b/Sources/HodEngine/Renderer/EmbedInSourceTemplate/BinarySourceFileTemplate.hpp.in
@@ -3,6 +3,11 @@
 
 namespace hod::renderer
 {
-	extern uint8_t @ESCAPED_FILE_NAME@[];
-	extern uint32_t @ESCAPED_FILE_NAME@_size;
+	// clang-format off
+	extern const uint8_t @ESCAPED_FILE_NAME@[];
+	extern const uint32_t @ESCAPED_FILE_NAME@_size;
+
+	extern const char @ESCAPED_FILE_NAME@_reflection[];
+	extern const uint32_t @ESCAPED_FILE_NAME@_reflection_size;
+	// clang-format on
 }
